--- a/Example_JupyterNotebook.ipynb
+++ b/Example_JupyterNotebook.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Setting Up\n",
     "\n",
-    "   This code prefers Python3 all though (I think) it will still run in 2. \n",
+    "   This code prefers Python3 although (I think) it will still run in 2. \n",
     "   \n",
     "   You will need to clone the BrainNetworksinPython repository\n",
     "\n",
@@ -111,9 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -154,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -201,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -242,9 +236,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:whitakerlab]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-whitakerlab-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -256,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
