--- a/Example_JupyterNotebook.ipynb
+++ b/Example_JupyterNotebook.ipynb
@@ -50,9 +50,9 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "# We add our WRAPPERS, SCRIPTS and exemplary_brains folders to the searchpath\n",
+    "# We add our WRAPPERS, SCRIPTS and EXAMPLE_DATA folders to the searchpath\n",
     "sys.path.append('./WRAPPERS')\n",
-    "sys.path.append('./exemplary_brains')\n",
+    "sys.path.append('./EXAMPLE_DATA')\n",
     "sys.path.append('./SCRIPTS/')                           "
    ]
   },
@@ -82,15 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We define our file locations. If you are using your own data these are the locations that you will want to change\n",
-    "centroids_file = \"./exemplary_brains/500.centroids.txt\"         \n",
-    "names_file = \"./exemplary_brains/500.names.txt\"                   \n",
-    "regionalmeasures_file =\"./exemplary_brains/PARC_500aparc_thickness_behavmerge.csv\" \n",
+    "centroids_file = \"./EXAMPLE_DATA/500.centroids.txt\"         \n",
+    "names_file = \"./EXAMPLE_DATA/500.names.txt\"                   \n",
+    "regionalmeasures_file =\"./EXAMPLE_DATA/PARC_500aparc_thickness_behavmerge.csv\" \n",
     "# We choose where to save the corrmat file\n",
     "if not os.path.isdir(os.getcwd()+'/notebook_output_files'):\n",
     "    os.makedirs(os.getcwd()+'/notebook_output_files')\n",
@@ -112,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -157,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -187,9 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -223,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -264,9 +254,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:whitakerlab]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-whitakerlab-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -278,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
