--- a/tutorials/prepare_data.ipynb
+++ b/tutorials/prepare_data.ipynb
@@ -13,8 +13,8 @@
    "source": [
     "# Brain Networks in Python\n",
     "\n",
-    "BrainNetworksInPython is a tool to perform network analysis over correlation networks of brain regions. \n",
-    "This tutorial will go through the basic functionality of BrainNetworksInPython, taking us from our inputs (a matrix of structural regional measures over subjects) to a report of local network measures for each brain region, and network level comparisons to a cohort of random graphs of the same degree. "
+    "scona is a tool to perform network analysis over correlation networks of brain regions. \n",
+    "This tutorial will go through the basic functionality of scona, taking us from our inputs (a matrix of structural regional measures over subjects) to a report of local network measures for each brain region, and network level comparisons to a cohort of random graphs of the same degree. "
    ]
   },
   {
@@ -25,8 +25,8 @@
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
-    "import BrainNetworksInPython as bnip\n",
-    "import BrainNetworksInPython.datasets as datasets"
+    "import scona as bnip\n",
+    "import scona.datasets as datasets"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "### Importing data\n",
     "\n",
-    "A BrainNetworksInPython analysis starts with four inputs.\n",
+    "A scona analysis starts with four inputs.\n",
     "* __regional_measures__\n",
     "    A pandas DataFrame with subjects as rows. The columns should include structural measures for each brain region, as well as any subject-wise covariates. \n",
     "* __names__\n",
