--- a/tutorials/tutorial.ipynb
+++ b/tutorials/tutorial.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Brain Networks in Python\n",
     "\n",
-    "BrainNetworksInPython is a tool to perform network analysis over correlation networks of brain regions. \n",
-    "This tutorial will go through the basic functionality of BrainNetworksInPython, taking us from our inputs (a matrix of structural regional measures over subjects) to a report of local network measures for each brain region, and network level comparisons to a cohort of random graphs of the same degree. "
+    "scona is a tool to perform network analysis over correlation networks of brain regions. \n",
+    "This tutorial will go through the basic functionality of scona, taking us from our inputs (a matrix of structural regional measures over subjects) to a report of local network measures for each brain region, and network level comparisons to a cohort of random graphs of the same degree. "
    ]
   },
   {
@@ -18,8 +18,8 @@
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
-    "import BrainNetworksInPython as bnip\n",
-    "import BrainNetworksInPython.datasets as datasets"
+    "import scona as bnip\n",
+    "import scona.datasets as datasets"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "### Importing data\n",
     "\n",
-    "A BrainNetworksInPython analysis starts with four inputs.\n",
+    "A scona analysis starts with four inputs.\n",
     "* __regional_measures__\n",
     "    A pandas DataFrame with subjects as rows. The columns should include structural measures for each brain region, as well as any subject-wise covariates. \n",
     "* __names__\n",
@@ -2294,7 +2294,7 @@
     "## Create a weighted graph\n",
     "\n",
     "A short sidenote on the BrainNetwork class: This is a very lightweight subclass of the [`Networkx.Graph`](https://networkx.github.io/documentation/stable/reference/classes/graph.html) class. This means that any methods you can use on a `Networkx.Graph` object can also be used on a `BrainNetwork` object, although the reverse is not true. We have added various methods which allow us to keep track of measures that have already been calculated, which, especially later on when one is dealing with 10^3 random graphs, saves a lot of time.  \n",
-    "All BrainNetworksInPython measures are implemented in such a way that they can be used on a regular `Networkx.Graph` object. For example, instead of `G.threshold(10)` you can use `bnip.threshold_graph(G, 10)`.  \n",
+    "All scona measures are implemented in such a way that they can be used on a regular `Networkx.Graph` object. For example, instead of `G.threshold(10)` you can use `bnip.threshold_graph(G, 10)`.  \n",
     "Also you can create a `BrainNetwork` from a `Networkx.Graph` `G`, using `bnip.BrainNetwork(network=G)`"
    ]
   },
@@ -2805,7 +2805,7 @@
    "source": [
     "## Create a GraphBundle\n",
     "\n",
-    "The `GraphBundle` object is the BrainNetworksInPython way to handle across network comparisons. What is it? Essentially it's a python dictionary with `BrainNetwork` objects as values. "
+    "The `GraphBundle` object is the scona way to handle across network comparisons. What is it? Essentially it's a python dictionary with `BrainNetwork` objects as values. "
    ]
   },
   {
@@ -2836,7 +2836,7 @@
     {
      "data": {
       "text/plain": [
-       "{'NSPN_cost=10': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f247f6fd0>}"
+       "{'NSPN_cost=10': <scona.classes.BrainNetwork at 0x7f3f247f6fd0>}"
       ]
      },
      "execution_count": 22,
@@ -2882,17 +2882,17 @@
     {
      "data": {
       "text/plain": [
-       "{'NSPN_cost=10': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f247f6fd0>,\n",
-       " 'NSPN_cost=10_R1': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f138b7f28>,\n",
-       " 'NSPN_cost=10_R10': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f134b8828>,\n",
-       " 'NSPN_cost=10_R2': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f138b7e80>,\n",
-       " 'NSPN_cost=10_R3': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f138b7780>,\n",
-       " 'NSPN_cost=10_R4': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f138b7da0>,\n",
-       " 'NSPN_cost=10_R5': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f1388ae10>,\n",
-       " 'NSPN_cost=10_R6': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f134b8a58>,\n",
-       " 'NSPN_cost=10_R7': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f134b84a8>,\n",
-       " 'NSPN_cost=10_R8': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f134b8390>,\n",
-       " 'NSPN_cost=10_R9': <BrainNetworksInPython.classes.BrainNetwork at 0x7f3f134b83c8>}"
+       "{'NSPN_cost=10': <scona.classes.BrainNetwork at 0x7f3f247f6fd0>,\n",
+       " 'NSPN_cost=10_R1': <scona.classes.BrainNetwork at 0x7f3f138b7f28>,\n",
+       " 'NSPN_cost=10_R10': <scona.classes.BrainNetwork at 0x7f3f134b8828>,\n",
+       " 'NSPN_cost=10_R2': <scona.classes.BrainNetwork at 0x7f3f138b7e80>,\n",
+       " 'NSPN_cost=10_R3': <scona.classes.BrainNetwork at 0x7f3f138b7780>,\n",
+       " 'NSPN_cost=10_R4': <scona.classes.BrainNetwork at 0x7f3f138b7da0>,\n",
+       " 'NSPN_cost=10_R5': <scona.classes.BrainNetwork at 0x7f3f1388ae10>,\n",
+       " 'NSPN_cost=10_R6': <scona.classes.BrainNetwork at 0x7f3f134b8a58>,\n",
+       " 'NSPN_cost=10_R7': <scona.classes.BrainNetwork at 0x7f3f134b84a8>,\n",
+       " 'NSPN_cost=10_R8': <scona.classes.BrainNetwork at 0x7f3f134b8390>,\n",
+       " 'NSPN_cost=10_R9': <scona.classes.BrainNetwork at 0x7f3f134b83c8>}"
       ]
      },
      "execution_count": 24,
