replace bnip with scn

--- a/tutorials/prepare_data.ipynb
+++ b/tutorials/prepare_data.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
-    "import scona as bnip\n",
+    "import scona as scn\n",
     "import scona.datasets as datasets"
    ]
   },
