--- a/tutorials/tutorial.ipynb
+++ b/tutorials/tutorial.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
-    "import scona as bnip\n",
+    "import scona as scn\n",
     "import scona.datasets as datasets"
    ]
   },
@@ -292,7 +292,7 @@
    },
    "outputs": [],
    "source": [
-    "df_res = bnip.create_residuals_df(df, names, covars)"
+    "df_res = scn.create_residuals_df(df, names, covars)"
    ]
   },
   {
@@ -2284,7 +2284,7 @@
    },
    "outputs": [],
    "source": [
-    "M = bnip.create_corrmat(df_res, method='pearson')"
+    "M = scn.create_corrmat(df_res, method='pearson')"
    ]
   },
   {
@@ -2294,8 +2294,8 @@
     "## Create a weighted graph\n",
     "\n",
     "A short sidenote on the BrainNetwork class: This is a very lightweight subclass of the [`Networkx.Graph`](https://networkx.github.io/documentation/stable/reference/classes/graph.html) class. This means that any methods you can use on a `Networkx.Graph` object can also be used on a `BrainNetwork` object, although the reverse is not true. We have added various methods which allow us to keep track of measures that have already been calculated, which, especially later on when one is dealing with 10^3 random graphs, saves a lot of time.  \n",
-    "All scona measures are implemented in such a way that they can be used on a regular `Networkx.Graph` object. For example, instead of `G.threshold(10)` you can use `bnip.threshold_graph(G, 10)`.  \n",
-    "Also you can create a `BrainNetwork` from a `Networkx.Graph` `G`, using `bnip.BrainNetwork(network=G)`"
+    "All scona measures are implemented in such a way that they can be used on a regular `Networkx.Graph` object. For example, instead of `G.threshold(10)` you can use `scn.threshold_graph(G, 10)`.  \n",
+    "Also you can create a `BrainNetwork` from a `Networkx.Graph` `G`, using `scn.BrainNetwork(network=G)`"
    ]
   },
   {
@@ -2313,7 +2313,7 @@
    },
    "outputs": [],
    "source": [
-    "G = bnip.BrainNetwork(network=M, parcellation=names, centroids=centroids)"
+    "G = scn.BrainNetwork(network=M, parcellation=names, centroids=centroids)"
    ]
   },
   {
@@ -2816,7 +2816,7 @@
    },
    "outputs": [],
    "source": [
-    "brain_bundle = bnip.GraphBundle([H], ['NSPN_cost=10'])"
+    "brain_bundle = scn.GraphBundle([H], ['NSPN_cost=10'])"
    ]
   },
   {
