replace Brain Networks in Python with scona

--- a/tutorials/prepare_data.ipynb
+++ b/tutorials/prepare_data.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brain Networks in Python\n",
+    "# scona\n",
     "\n",
     "scona is a tool to perform network analysis over correlation networks of brain regions. \n",
     "This tutorial will go through the basic functionality of scona, taking us from our inputs (a matrix of structural regional measures over subjects) to a report of local network measures for each brain region, and network level comparisons to a cohort of random graphs of the same degree. "
