--- a/tutorials/global_network_viz.ipynb
+++ b/tutorials/global_network_viz.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualisation tutorial\n",
+    "# Gloabl network visualisation tutorial\n",
     "\n",
     "In the [`introductory_tutorial`](introductory_tutorial.ipynb) we ran through building structural covariance network analyses using `scona`🍪.\n",
     "\n",
-    "In this tutorial we'll cover some of the visualisation tools to communicate these results.\n",
+    "In this tutorial we'll cover some of the visualisation tools that communicate global network measures from your results.\n",
     "\n",
     "Click on any of the links below to jump to that section\n",
     "* [Get set up](#Get-set-up) (make sure to run this section before jumping into any of the others!)\n",
@@ -814,7 +814,8 @@
     }
    ],
    "source": [
-    "plot_network_measures(bundleGraphs, real_network=\"real_graph\",\n",
+    "plot_network_measures(bundleGraphs,\n",
+    "                      real_network=\"real_graph\",\n",
     "                      ci=\"sd\")"
    ]
   },
@@ -1320,6 +1321,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rich_club_df."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1479,7 +1489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1493,7 +1503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
