Add the info on how to save a ConnectomeView as an html file to the interactive_viz_tutorial

--- a/tutorials/interactive_viz_tutorial.ipynb
+++ b/tutorials/interactive_viz_tutorial.ipynb
@@ -15,8 +15,7 @@
     "Click on any of the links below to jump to that section\n",
     "* [Get set up](#Get-set-up) (make sure to run this section before jumping into any of the others!)\n",
     "* [Visualise nodes in 3D: `view_nodes_3d`](#Visualise-nodes-in-3D%3A-%3Ccode%3Eview_nodes_3d%3C%2Fcode%3E)\n",
-    "* [Visualise Connectome in 3D: `view_connectome_3d`](#Visualise-Connectome-in-3D%3A%3Ccode%3Eview_connectome_3d%3C%2Fcode%3E)\n",
-    "* [Plot Connectome: `plot_connectome`](#Plot-Connectome%3A-%3Ccode%3Eplot_connectome%3C%2Fcode%3E)"
+    "* [Visualise connectome in 3D: `view_connectome_3d`](#Visualise-Connectome-in-3D%3A%3Ccode%3Eview_connectome_3d%3C%2Fcode%3E)"
    ]
   },
   {
@@ -113,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Look at one specific node's attributes\n",
@@ -123,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# show the nodal attributes of first 5 brain regions\n",
@@ -148,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import the function to plot network measures\n",
@@ -178,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -258,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get the nodal measures as a pandas dataframe\n",
@@ -293,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -322,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -351,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a list that has 0s everwhere except for that one node\n",
@@ -366,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -391,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define the degree threshold that separates the rich club from\n",
@@ -422,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -480,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -518,7 +541,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -542,7 +567,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -569,7 +596,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set vmin and vmax to be the 10th and 90th percentiles of the data range\n",
@@ -580,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -622,7 +653,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -653,7 +686,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print the number of edges\n",
@@ -664,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print the weight of a couple of example edges\n",
@@ -705,7 +742,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scona.visualisations import view_connectome_3d"
@@ -775,7 +814,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -803,7 +844,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -829,7 +872,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -858,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -885,7 +932,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -925,7 +974,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a view\n",
@@ -941,6 +992,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### *Note*: transfer interactive brain visualisation into your local machine:\n",
+    "\n",
+    "Even if you have a command-line interface and/or perform brain network analysis on the remote machine/cluster, you are still able to get produced interactive visualisations **into your local machine** and view those plots.  \n",
+    "\n",
+    "Save the output of any function described in this tutorial as a ConnectomeView data type.\n",
+    "\n",
+    "ConnectomeView data type can be **saved as an html page** or rendered (transparently) by the Jupyter notebook. Useful methods are :\n",
+    "\n",
+    "- ‘resize’ to resize the plot displayed in a Jupyter notebook  \n",
+    "- ‘save_as_html’ to save the plot to a file  \n",
+    "- ‘open_in_browser’ to save the plot and open it in a web browser.\n",
+    "\n",
+    "For example, you can do the following:\n",
+    "\n",
+    "```\n",
+    "# save the output of the visualisation function into the variable ConnectomeView\n",
+    "ConnectomeView = view_connectome_3d(G)\n",
+    "\n",
+    "# save the visualisation in the current directory as html file\n",
+    "ConnectomeView.save_as_html(file_name=\"my-lovely-viz.html\")\n",
+    "```\n",
+    "\n",
+    "Now you are able to move the .html file from remote machine/cluster to your local machine.  \n",
+    "Then open the html file you moved in a browser!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Thank you\n",
     "\n",
     "We hope you really enjoyed playing around with these interactive brains!"
@@ -949,9 +1030,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kwpython3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-kwpython3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -963,7 +1044,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
