--- a/tutorials/global_measures_viz.ipynb
+++ b/tutorials/global_measures_viz.ipynb
@@ -1484,9 +1484,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kwPython3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-kwPython3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1498,7 +1498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
