--- a/tutorials/prepare_data.ipynb
+++ b/tutorials/prepare_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -231,38 +231,38 @@
        "3           3    10778    0  Cambridge     2K_Cohort    20.022  Female   0.0   \n",
        "4           4    10794    0  Cambridge     2K_Cohort    14.656  Female   0.0   \n",
        "\n",
-       "   age_bin mri_centre       ...         rh_supramarginal_part5  \\\n",
-       "0        4       WBIC       ...                          2.592   \n",
-       "1        2       WBIC       ...                          3.448   \n",
-       "2        1       WBIC       ...                          3.526   \n",
-       "3        4       WBIC       ...                          2.830   \n",
-       "4        1       WBIC       ...                          2.689   \n",
+       "   age_bin mri_centre  ...  rh_supramarginal_part5  rh_supramarginal_part6  \\\n",
+       "0        4       WBIC  ...                   2.592                   2.841   \n",
+       "1        2       WBIC  ...                   3.448                   3.283   \n",
+       "2        1       WBIC  ...                   3.526                   3.269   \n",
+       "3        4       WBIC  ...                   2.830                   2.917   \n",
+       "4        1       WBIC  ...                   2.689                   3.294   \n",
        "\n",
-       "   rh_supramarginal_part6  rh_supramarginal_part7  rh_frontalpole_part1  \\\n",
-       "0                   2.841                   2.318                 2.486   \n",
-       "1                   3.283                   2.740                 3.225   \n",
-       "2                   3.269                   3.076                 3.133   \n",
-       "3                   2.917                   2.647                 2.796   \n",
-       "4                   3.294                   2.820                 2.539   \n",
+       "   rh_supramarginal_part7  rh_frontalpole_part1  rh_temporalpole_part1  \\\n",
+       "0                   2.318                 2.486                  3.526   \n",
+       "1                   2.740                 3.225                  4.044   \n",
+       "2                   3.076                 3.133                  3.900   \n",
+       "3                   2.647                 2.796                  3.401   \n",
+       "4                   2.820                 2.539                  2.151   \n",
        "\n",
-       "   rh_temporalpole_part1  rh_transversetemporal_part1  rh_insula_part1  \\\n",
-       "0                  3.526                        2.638            3.308   \n",
-       "1                  4.044                        3.040            3.867   \n",
-       "2                  3.900                        2.914            3.894   \n",
-       "3                  3.401                        3.045            3.138   \n",
-       "4                  2.151                        2.734            2.791   \n",
+       "   rh_transversetemporal_part1  rh_insula_part1  rh_insula_part2  \\\n",
+       "0                        2.638            3.308            2.583   \n",
+       "1                        3.040            3.867            2.943   \n",
+       "2                        2.914            3.894            2.898   \n",
+       "3                        3.045            3.138            2.739   \n",
+       "4                        2.734            2.791            2.935   \n",
        "\n",
-       "   rh_insula_part2  rh_insula_part3  rh_insula_part4  \n",
-       "0            2.583            3.188            3.089  \n",
-       "1            2.943            3.478            3.609  \n",
-       "2            2.898            3.720            3.580  \n",
-       "3            2.739            2.833            3.349  \n",
-       "4            2.935            3.538            3.403  \n",
+       "   rh_insula_part3  rh_insula_part4  \n",
+       "0            3.188            3.089  \n",
+       "1            3.478            3.609  \n",
+       "2            3.720            3.580  \n",
+       "3            2.833            3.349  \n",
+       "4            3.538            3.403  \n",
        "\n",
        "[5 rows x 324 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
